# cpp-mistakes

./: CMakeLists.txt  LICENSE
1.sign/: CMakeLists.txt  sign.cpp
2.fp_comparison/: CMakeLists.txt  fp_comparison.cpp
3.new_delete/: CMakeLists.txt  new_delete.cpp
4.dead_reference/: CMakeLists.txt  dead_reference.cpp
5.local_reference/: CMakeLists.txt  local_reference.cpp
6.stack_overflow/: CMakeLists.txt  stack_overflow.cpp
7.sizeof_struct/: CMakeLists.txt  sizeof_struct.cpp
8.value_or_reference/: CMakeLists.txt  value_or_reference.cpp
